--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
+* {
+    font-family: playfair display; 
+    background-color: darkseagreen;
+    text-align: center;
+    
 
+}
+
+h2 {
+    border: solid, darkolivegreen;
+}
